--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,16 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.categoria{
+  display: flex;
+  align-items: center;
+  padding: 10px 0 10px 15px;
+  background-color: #f5f5f5;
 }
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.categoria img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.categoria h2{
+  margin: 0 10px;
+  color: #888;
+  font-size: 22px;
 }
