--- a/src/app/detalhe/detalhe.page.html
+++ b/src/app/detalhe/detalhe.page.html
@@ -21,8 +21,8 @@
       <ion-button (click)="addQtd()">+</ion-button>
     </div>
 
-    <div class="m-auto">
-      <ion-button>Adicionar {{produto.valor * quantidade | currency: 'BRL'}}</ion-button>
+    <div class="m-auto" >
+      <ion-button (click)="addCarrinho()" routerLink="/home">Adicionar {{produto.valor * quantidade | currency: 'BRL'}}</ion-button>
     </div>
   </footer>
 </ion-content>
