--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,9 +18,9 @@
     </ion-list>
   </div>
 
-  <div class="fix"></div>
+  <div class="fix" *ngIf="carrinho.length > 0"></div>
 
-  <footer>
+  <footer *ngIf="carrinho.length > 0" routerLink="/carrinho">
     <div>
       <ion-icon name="cart-outline"></ion-icon>
       <ion-badge>{{carrinho.length}}</ion-badge>
@@ -29,7 +29,7 @@
       <h4>Meu pedido</h4>
     </div>
     <div>
-      <p>{{ totalCarrinho }}</p>
+      <p>{{ totalCarrinho | currency: 'BRL'}}</p>
     </div>
   </footer>
 </ion-content>
